--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,10 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+/.idea/.gitignore
+/asd-cs525-final-project.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/out/production/asd-cs525-final-project/presentation/ccard/Report
+/.idea/uiDesigner.xml
+/.idea/vcs.xml
